# sourmash_cpp

./: .gitmodules  CMakeLists.txt  Makefile  README.md
.github/workflows/: ci.yml
src/: main.cpp
